connected to css

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe Exercise</title>
-    <stylesheet><a href="css/style.css"></a></stylesheet>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wireframe Exercise</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-    <nav><img src="https://place-hold.it/200x70/ddd" alt=""></nav>
-    <ul>
-      <li><a href="#">Nav Item 1</a></li>
-      <li><a href="#">Nav Item 2</a></li>
-      <li><a href="#">Nav Item 3</a></li>
-      <li><a href="#">Nav Item 4</a></li>
-    </ul>
-    <h2>
-    </h2>
+    <nav><img src="https://place-hold.it/200x70/ddd" alt="">
+      <ul>
+        <li><a href="#">Nav Item 1</a></li>
+        <li><a href="#">Nav Item 2</a></li>
+        <li><a href="#">Nav Item 3</a></li>
+        <li><a href="#">Nav Item 4</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <img src="https://place-hold.it/960x450/ddd" alt="">
@@ -38,15 +38,22 @@
           Unde officia vel sapiente, deserunt ex repellat voluptatem porro facilis. Eos, veniam velit natus adipisci id
           maiores necessitatibus ab illo dolore officia asperiores tempore, cupiditate iusto maxime reprehenderit beatae
           deleniti.
-          Culpa, sint! Enim in accusamus voluptates facilis illum excepturi quos? Dolore quasi velit enim vel dicta totam.
+          Culpa, sint! Enim in accusamus voluptates facilis illum excepturi quos? Dolore quasi velit enim vel dicta
+          totam.
           Temporibus voluptas laudantium minus similique ea quia suscipit perferendis. Excepturi recusandae laudantium
-          adipisci.</p>
-          <button>Call to Action</button>
-        </article>
-      </section>
-    </main>
-      <footer></footer>
-  </body>
-  
-  </html>
+          adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime dolor nulla fugit hic inventore, optio itaque laborum adipisci sint, vel veritatis, provident qui neque libero maiores error ipsam est reprehenderit!
+          Voluptas pariatur velit quas, reiciendis debitis architecto, optio fuga accusantium id cum qui quaerat! Fuga quia, officiis autem dolores odio dicta, reiciendis facere, labore nam similique dignissimos pariatur eius ea?
+          Culpa maiores dolor saepe eius labore nesciunt blanditiis voluptates repellendus enim reprehenderit molestiae id, voluptatum aut molestias dolorem sapiente repudiandae magnam deleniti! Laudantium, veritatis quisquam sit repellat ab fuga. Iure?
+          Sapiente sunt aliquam, doloremque ipsam tenetur magnam nihil deleniti, perspiciatis possimus et quas recusandae! Corporis asperiores consequatur rerum, sequi porro, numquam non, perferendis explicabo nisi iusto quod ipsa ea sapiente?
+          Deserunt porro ab quas labore quis ullam quos velit impedit eveniet ipsam, consequatur incidunt id molestias! Perspiciatis quos nobis quo, iste quia possimus quam accusantium sunt perferendis molestiae a soluta.
+          Ab a labore, totam nobis, ad similique repudiandae sunt officiis impedit eveniet omnis veniam, possimus quos atque! Eveniet officia, laudantium alias vitae, laboriosam sunt dolores libero vel autem commodi sit?
+          Architecto magnam consectetur impedit quis ducimus dolore cupiditate quidem, inventore veniam perspiciatis suscipit minus eligendi quae exercitationem quos libero vitae neque praesentium commodi doloribus vel vero at itaque recusandae? Deserunt.
+          Ipsam molestiae nemo officia beatae voluptate excepturi velit deserunt iure? Impedit debitis, voluptatibus maxime totam natus modi veniam molestiae, voluptates unde ex quae veritatis ipsum quos? Atque minima sit inventore.</p>
+        <button>Call to Action</button>
+      </article>
+    </section>
+  </main>
+  <footer></footer>
+</body>
 
+</html>
